# side-scroller

./: .gitignore  Cargo.toml  README.md
assets/: LDTKFollowAlong.ldtk  tile_based_game.ldtk
assets/sprites/: Mage.aseprite
src/: animation.rs  components.rs  lib.rs  main.rs  pathfinding.rs  randomizer.rs  schedule.rs  state.rs  systems.rs
src/ai/: mod.rs
src/combat/: mod.rs
src/grid/: grid_structs.rs  mod.rs
src/movement/: mod.rs
src/pathfinding/: mod.rs  pathfinding_structs.rs
