[package]
name = "side-scroller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12", default-features = false, features = ["bevy_sprite"] }
bevy_ecs_ldtk = "0.8.0"
rand = "0.8.5"
bevy_rapier2d = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bevy_ecs_tilemap = { version = "0.11", default-features = false }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
