[package]
name = "side-scroller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs_ldtk = "0.9.0"
bevy = "0.12"
bevy_rapier2d = "0.23.0"
bevy-inspector-egui = "0.21.0"
rand = "0.8"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
